--- a/trunk/.project
+++ b/trunk/.project
@@ -1,7 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <projectDescription>
-	<name>CodeHighlightEditor</name>
-	<comment></comment>
+	<name>code-syntax-highlight-editor</name>
+	<comment/>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -16,3 +16,4 @@
 		<nature>com.adobe.flexbuilder.project.actionscriptnature</nature>
 	</natures>
 </projectDescription>
+
